2002-01-14  Marcus Meissner <marcus@jet.franken.de>
	
	* samsung.c: Added progress and abort handling to image download.

2002-01-14  Marcus Meissner <marcus@jet.franken.de>
	
	[ I bought a Practika QD800, which is the same model. ]
	* samsung.c: Fixed the porting bugs, the driver now downloads
	  images correctly.